--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Local Bootstrap 5.3.0 -->
     <link href="bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>My personal Association</title>
+    <title>My personal Association - "Les Petits Chiens du monde"</title>
 </head>
 
 <body>
