--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- CSS File-->
+    <!-- Description of the website (150 to 180 char maximun)-->
+    <meta name="description" content="Lorem Ipsum">
+    <!-- Local CSS File-->
     <link rel="stylesheet" href="style.css">
-
     <!-- Local Bootstrap 5.3.0 -->
     <link href="bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>My personal Association - "Les Petits Chiens du monde"</title>
+    <!-- My personal Association -->
+    <title>Les Petits Chiens du monde</title>
 </head>
 
 <body>
 
-    <!-- Header part -->
+    <!-- Header part - Navigation -->
 <header>
 
 </header>
