4eme commit basic color in css file

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <title>Les Petits Chiens du monde</title>
 </head>
 
-<body>
+<body class="container-fluid bg-site">
 
     <!-- Header part - Navigation -->
-<header>
+<header class="container-fluid bg-site">
 
 </header>
 
 <!-- Main page -->
-<main>
+<main class="container-fluid bg-site">
 
     <!-- Section #0 -->
 <section>
