--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 </main>   
 
     <!-- Footer -->
-<div class="container-fluid bg-4 text-center fw-normal">
-    <footer class="d-flex flex-wrap justify-content-between align-items-center py-6 my-6">
+<div class="container-fluid bg-4 text-center fw-normal md-0">
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 ">
         <div class="col-md-6 d-flex align-items-center">
             <a href="#navigation"> <!--Vers le haut de page -->
                 <svg xmlns="http://www.w3.org/2000/svg" width="38" height="40" fill="dark"
@@ -164,8 +164,9 @@
             </ul>
         </div>
 
-        <ul class="list-unstyled d-flex col-md-3 col-lg-6">
-            <li class="ms-3 col-md-2"><a class="link-light" href="LIEN BEHANCE">
+        <!-- <ul class="list-unstyled d-flex col-md-3 col-lg-6 "> -->
+            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN BEHANCE">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="dark" class="bi bi-behance"
                         viewBox="0 0 16 16">
                         <path
@@ -174,7 +175,7 @@
                 </a>
             </li>
 
-            <li class="ms-3 col-md-2"><a class="link-light" href="LIEN LINKEDIN">
+            <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN LINKEDIN">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="dark" class="bi bi-linkedin"
                         viewBox="0 0 16 16">
                         <path
@@ -183,7 +184,7 @@
                 </a>
             </li>
 
-            <li class="ms-3 col-md-2"><a class="link-light" href="LIEN FACEBOOK">
+            <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN FACEBOOK">
                     <svg width="10" height="22" viewBox="0 0 10 22" fill="dark" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink">
                         <path
@@ -193,7 +194,7 @@
                 </a>
             </li>
 
-            <li class="ms-3 col-md-2"><a class="link-light" href="LIEN TWITTER">
+            <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN TWITTER">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="dark" class="bi bi-twitter"
                         viewBox="0 0 16 16">
                         <path
@@ -202,7 +203,7 @@
                 </a>
             </li>
 
-            <li class="ms-3 col-md-2"><a class="link-light" href="LIEN YOUTUBE">
+            <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN YOUTUBE">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="dark" class="bi bi-youtube"
                         viewBox="0 0 16 16">
                         <path
@@ -211,7 +212,7 @@
                 </a>
             </li>
 
-            <li class="ms-3 col-md-2"><a class="link-light" href="LIEN INSTAGRAM">
+            <li class="ms-3 col-lg-1"><a class="link-light" href="LIEN INSTAGRAM">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="dark" class="bi bi-instagram"
                         viewBox="0 0 16 16">
                         <path
@@ -220,7 +221,7 @@
                 </a>
             </li>
             
-            <li class="ms-3 col-md-2"><a class="link-light" href="mailto:MAIL ASSOS">
+            <li class="ms-3 col-lg-1"><a class="link-light" href="mailto:MAIL ASSOS">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="dark" 
                     class="bi bi-envelope-at" viewBox="0 0 16 16">
                         <path
@@ -239,7 +240,6 @@
 
     </footer>
 </div>
-
 
 
     <!-- Local Javascript -->
