7e commit Fixe Header/Nav

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
             <div class="container-fluid">
     
                 <a href="#LOREM1" class="d-flex align-items-center fs-4 text-white sm-2">
-                    <img src="image/NOM PRENOM SITE MAJ.png" width="100" height="100" class="me-3" alt="ILAN-TERVIL-LOGO">
+                    <img src="image/patte de chien picto2.png" width="100" height="100" class="me-3" alt="ILAN-TERVIL-LOGO">
                 </a>
                 <!--<h1 class="navbar-brand">Port'folio</h1>-->
-                <h1 class="badge navbar-brand sm-6">Lorem ipsum.</h1>
+                <h1 class="badge navbar-brand md-6"><p>Les Petits Chiens<br>du Monde</p></h1>
 
                 <!-- Bouton, quand la barre s'effondre (disparrait) après un point de rupture (lg ici)-->
                 <!-- cliquer dessus pour faire réparaitre les éléments de la barre de navig quand on est en lg-->
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                     arial-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation">
                     <!-- Image du bouton (voir documentation boostrap pour avoir une autre image)-->
-            <a href="#LOREM1"></a> <img src="image/Chien langue & non langue picto.png" width="60" height="60" class="me-2" alt="Chien langue & non langue picto"></a>
+            <a href="#LOREM1"></a> <img src="image/Chien langue & non langue picto.png" width="48" height="48" class="me-1" alt="Chien langue & non langue picto"></a>
                 </button>
     
                 <!-- collapse permet de faire s'effondrer (disparraitre) la barre de navig, 
