--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
         <p class="lead">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis magnam 
             commodi labore quibusdam accusantium cupiditate molestias similique enim, velit optio? 
             Dicta nemo officiis autem impedit esse magnam quisquam temporibus minima.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi maiores omnis, 
+            atque dolorum quos quo ullam architecto eaque minima recusandae, quisquam quam, 
+            obcaecati hic soluta blanditiis praesentium laudantium reprehenderit! Consectetur!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi maiores omnis,
+                        atque dolorum quos quo ullam architecto eaque minima recusandae, quisquam quam,
+                        obcaecati hic soluta blanditiis praesentium laudantium reprehenderit! Consectetur!</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi maiores omnis,
+                                    atque dolorum quos quo ullam architecto eaque minima recusandae, quisquam quam,
+                                    obcaecati hic soluta blanditiis praesentium laudantium reprehenderit! Consectetur!</p>
     </div>
     <div class="col-md-5 order-md-1">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
@@ -133,6 +142,7 @@
 
 <section id="objectif">
 
+<article>
 <div class="col-lg-12 bg-1">
     <!-- <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
         role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -141,73 +151,77 @@
     </svg> -->
 
     <h2 class="fw-normal featurette-heading lh-1 mb-3">Notre histoire, et nos objectif.</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente 
+    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente 
         numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi 
-        voluptates! Atque quae cupiditate qui eius?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
+        voluptates! Atque quae cupiditate qui eius?<br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
                 numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi
-                voluptates! Atque quae cupiditate qui eius?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
+                voluptates! Atque quae cupiditate qui eius?<br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
                         numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi
                         voluptates! Atque quae cupiditate qui eius?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
+            numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi
+            voluptates! Atque quae cupiditate qui eius?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
+            numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi
+            voluptates! Atque quae cupiditate qui eius?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
+            numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi
+            voluptates! Atque quae cupiditate qui eius?</p>
     <!-- <p><a class="btn btn-secondary" href="#">View details »</a></p> -->
 </div>
+</article>
+
 </section>
 
     <!-- Section #2 Gallerie d'image -->
 
 <section id="gallerie-image">
-<div class="container-fluid bg-2 col-lg-12">
+<div class="container bg-2 col-md-6 col-lg-12">
 
 <!-- Carousel -->
-<div id="demo" class="carousel slide" data-bs-ride="carousel">
-
-    <!-- Indicators/dots -->
+<div id="carouselExampleCaptions" class="carousel slide">
     <div class="carousel-indicators">
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
-        <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+            aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+            aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+            aria-label="Slide 3"></button>
     </div>
-
-    <!-- The slideshow/carousel -->
-    <div class="carousel-inner">
+    <div class="carousel-inner col-6 py-5 px-4 mb-6">
         <div class="carousel-item active">
-            <img src="https://picsum.photos/100/100" alt="Los Angeles" class="d-block" style="width:100%">
-            <div class="carousel-caption">
-                <h3>Los Angeles</h3>
-                <p>We had such a great time in LA!</p>
+            <img src="image/Chien langue picto.jpg" class="d-block w-100" alt="..." width="50" height="auto">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="https://picsum.photos/100/100" alt="Chicago" class="d-block" style="width:100%">
-            <div class="carousel-caption">
-                <h3>Chicago</h3>
-                <p>Thank you, Chicago!</p>
+            <img src="image/Chien langue picto.jpg" class="d-block w-100" alt="..." width="50" height="auto">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
             </div>
         </div>
         <div class="carousel-item">
-            <img src="https://picsum.photos/100/100" alt="New York" class="d-block" style="width:100%">
-            <div class="carousel-caption">
-                <h3>New York</h3>
-                <p>We love the Big Apple!</p>
+            <img src="image/Chien langue picto.jpg" class="d-block w-100" alt="..." width="50" height="auto">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
             </div>
         </div>
     </div>
-
-    <!-- Left and right controls/icons -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
     </button>
 </div>
-
-<div class="container-fluid mt-3">
-    <h3>Carousel Example</h3>
-    <p>The following example shows how to create a basic carousel with indicators and controls.</p>
-</div>
-
 
 
 <!-- Gallerie Petit chien du Monde-->
