13e commit First test JS with changeDog display and remove dog button

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <!-- Bouton, quand la barre s'effondre (disparrait) après un point de rupture (lg ici)-->
                 <!-- cliquer dessus pour faire réparaitre les éléments de la barre de navig quand on est en lg-->
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                    arial-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation">
+                    arial-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation" onclick="changeDog()">
                     <!-- Image du bouton (voir documentation boostrap pour avoir une autre image)-->
             <a href="#presentation"></a> <img src="image/Chien langue & non langue picto.png" width="48" height="48" 
-            class="me-1 button-click" alt="Chien langue & non langue picto"></a>
+            class="me-1" alt="Chien langue & non langue picto" id="ChienChange"></a>
                 </button>
     
 <header class="collapse navbar-collapse p-3 mb-3" id="navbarNavDropdown">
