--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <!-- Bouton, quand la barre s'effondre (disparrait) après un point de rupture (lg ici)-->
                 <!-- cliquer dessus pour faire réparaitre les éléments de la barre de navig quand on est en lg-->
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                    arial-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation" onclick="changeDog()">
+                    arial-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation" onclick="changeDog('#ChienChange')">
                     <!-- Image du bouton (voir documentation boostrap pour avoir une autre image)-->
-            <a href="#presentation"></a> <img src="image/Chien langue & non langue picto.png" width="48" height="48" 
+            <a href="#presentation"></a> <img src="image/Chienlangue&nonlanguepictoalt.png" width="48" height="58" 
             class="me-1" alt="Chien langue & non langue picto" id="ChienChange"></a>
                 </button>
     
@@ -69,9 +69,9 @@
     
                             <div class="dropdown text-end">
                                 <a href="#" class="d-block link-light text-decoration-none dropdown-toggle"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    data-bs-toggle="dropdown" aria-expanded="false" onclick="changeDog('.call-function-changeDog')">
                                     <img src="image/Chienlangue&nonlanguepictoalt.png" alt="mdo" width="32" height="40"
-                                        class="rounded-circle button-click">
+                                        class="rounded-circle call-function-changeDog">
                                 </a>
                                 <ul class="dropdown-menu text-small ovale-navigation">
                                     <!-- <li><a class="dropdown-item" href="#navigation"></a></li> -->
