17e commit fix and finish Scroll Button with new image

--- a/index.html
+++ b/index.html
@@ -537,15 +537,15 @@
 
 <!-- Bouton ScrollTop -->
 <button>
-    <a href="#navigation" class="btn-scrolltop btn text-danger rounded-pill dark" id="scrollTop">
-        Haut de page <i class="bi bi-chevron-up"></i>
+    <a href="#navigation" class="btn btn-scrolltop" id="scrollTop">
+        <img src="image/Chien langue Scroll Down.png" width="72" height="auto">
     </a>
 </button>
 
 <!--Bouton ScrollDown -->
 <button>
-    <a href="#footer" class="btn-scrollDown btn text-danger rounded-pill dark" id="scrollDown">
-        Bas de page <i class="bi bi-chevron-up"></i>
+    <a href="#footer" class="btn btn-scrollDown" id="scrollDown">
+        <img src="image/Chien langue Scroll Top.png" width="72" height="auto">
     </a>
 </button>
 
