19e commit almost fix doggy button and advance on js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Les Petits Chiens du monde</title>
 </head>
 
-<body class="container-fluid bg-site">
+<body class="container-fluid bg-site text-light">
 
     <!-- Header part - Navigation -->
 <header class="container-fluid bg-site">
@@ -43,8 +43,8 @@
                 </button>
 
                 <!-- Modal Button -->
-                <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#settingsModal">
-                        <img src="image/" width="72" height="auto">
+                <button type="button" class="btn btn-warning-text" data-bs-toggle="modal" data-bs-target="#settingsModal">
+                        <img src="image/..." width="72" height="auto">
                 </button>
 
 <header class="collapse navbar-collapse p-3 mb-3" id="navbarNavDropdown">
@@ -434,7 +434,7 @@
                         </div>
                     </div>
                     <hr class="my-6">
-                    <button class="w-6 py-8 btn btn-primary btn-md" type="submit"> 
+                    <button class="w-6 py-8 btn btn-doggy  btn-md" type="submit"> 
                         <img src="image/Chienlangue&nonlanguepictoalt.png" width="72" height="auto">Envoyez</button>
                 </form>
             </div>
@@ -542,18 +542,18 @@
 </section>
 
 <!-- Bouton ScrollTop -->
-<button>
+
     <a href="#navigation" class="btn btn-scrolltop" id="scrollTop">
         <img src="image/Chien langue Scroll Down.png" width="50" height="auto">
     </a>
-</button>
+
 
 <!--Bouton ScrollDown -->
-<button>
+
     <a href="#footer" class="btn btn-scrollDown" id="scrollDown">
         <img src="image/Chien langue Scroll Top.png" width="50" height="auto">
     </a>
-</button>
+
 
 
 <!-- Modal -->
@@ -568,11 +568,11 @@
                 <div class="row row-cols-2 justify-content-center">
                     <div class="ChangeThemeDiv" data-theme="light">
                         <img src="image/light.svg">
-                        Clair
+                        Printemps de chien
                     </div>
                     <div class="ChangeThemeDiv" data-theme="dark">
                         <img src="image/dark.svg">
-                        Sombre
+                        Chien d'autonme
                     </div>
                 </div>
             </div>
