--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <!-- Local CSS File-->
     <link rel="stylesheet" href="style.css">
     <!-- Local Bootstrap 5.3.0 -->
-    <link href="bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="bootstrap-5.3.0-alpha1-dist/css/bootstrap.min.css" 
+    rel="stylesheet">
+    <!-- Bootstrap Distant Icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <!-- My personal Association -->
     <title>Les Petits Chiens du monde</title>
 </head>
@@ -43,9 +46,14 @@
                 </button>
 
                 <!-- Modal Button -->
+
                 <button type="button" class="btn btn-warning-text" data-bs-toggle="modal" data-bs-target="#settingsModal">
-                        <img src="image/..." width="72" height="auto">
+                    <img src="image/Chien parametre.png" width="42" height="auto">
                 </button>
+
+        <!-- <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#settingsModal">
+            <i class="bi bi-sliders"></i>
+        </button> -->
 
 <header class="collapse navbar-collapse p-3 mb-3" id="navbarNavDropdown">
 
@@ -556,22 +564,22 @@
 
 
 
-<!-- Modal -->
+<!-- Modal (contain) -->
 <div class="modal fade" id="settingsModal" tabindex="-1" aria-labelledby="settingsModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content bg-dark">
-            <div class="modal-header">
-                <h1 class="modal-title fs-5" id="settingsModalLabel">Réglages</h1>
+        <div class="modal-content">
+            <div class="modal-header bg-0">
+                <h1 class="modal-title fs-5 " id="settingsModalLabel">Réglages</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body bg-modal-1">
                 <div class="row row-cols-2 justify-content-center">
-                    <div class="ChangeThemeDiv" data-theme="light">
-                        <img src="image/light.svg">
+                    <div class="ChangeThemeDiv" data-theme="spring">
+                        <img src="image/chien printemp.png" width="42" height="auto">
                         Printemps de chien
                     </div>
-                    <div class="ChangeThemeDiv" data-theme="dark">
-                        <img src="image/dark.svg">
+                    <div class="ChangeThemeDiv" data-theme="autumn">
+                        <img src="image/chien automne.png" width="42" height="auto">
                         Chien d'autonme
                     </div>
                 </div>
