22e commit finish change theme parameter js functionnality (autumn mod)

--- a/index.html
+++ b/index.html
@@ -574,14 +574,17 @@
             </div>
             <div class="modal-body bg-modal-1">
                 <div class="row row-cols-2 justify-content-center">
-                    <div class="ChangeThemeDiv" data-theme="spring">
-                        <img src="image/chien printemp.png" width="42" height="auto">
+
+                    <div class="ChangeThemeDiv block-spring" data-theme="spring">
+                        <img class="btn-spring" src="image/chien printemp.png" width="42" height="auto">
                         Printemps de chien
                     </div>
-                    <div class="ChangeThemeDiv" data-theme="autumn">
-                        <img src="image/chien automne.png" width="42" height="auto">
+
+                    <div class="ChangeThemeDiv block-autumn" data-theme="autumn">
+                        <img class="btn-autumn" src="image/chien automne.png" width="42" height="auto">
                         Chien d'autonme
                     </div>
+
                 </div>
             </div>
         </div>
