24e commit almost finish parameter functionality JS

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
                 <!-- Modal Button -->
 
-                <button type="button" class="btn btn-warning-text picto-theme3" data-bs-toggle="modal" data-bs-target="#settingsModal">
-                    <img src="image/Chien parametre.png" width="42" height="auto">
+                <button type="button" class="btn btn-warning-text" data-bs-toggle="modal" data-bs-target="#settingsModal">
+                    <img src="image/Chien parametre.png" width="42" height="auto" class="picto-theme3">
                 </button>
 
         <!-- <button type="button" class="btn " data-bs-toggle="modal" data-bs-target="#settingsModal">
@@ -86,7 +86,7 @@
                                 <a href="#" class="d-block link-light text-decoration-none dropdown-toggle"
                                     data-bs-toggle="dropdown" aria-expanded="false"  onclick="changeDog('#ChienChange2')">
                                     <img src="image/Chienlangue&nonlanguepictoalt.png" alt="mdo" width="32" height="32"
-                                        class="rounded-circle call-function-changeDog" id="ChienChange2">
+                                        class="rounded-circle call-function-changeDog picto-theme2" id="ChienChange2">
                                 </a>
                                 <ul class="dropdown-menu text-small ovale-navigation">
                                     <!-- <li><a class="dropdown-item" href="#navigation"></a></li> -->
@@ -443,7 +443,7 @@
                     </div>
                     <hr class="my-6">
                     <button class="w-6 py-8 btn btn-doggy  btn-md" type="submit"> 
-                        <img src="image/Chienlangue&nonlanguepictoalt.png" width="72" height="auto">Envoyez</button>
+                        <img src="image/Chienlangue&nonlanguepictoalt.png" width="72" height="auto" class="picto-theme6">Envoyez</button>
                 </form>
             </div>
         </div>
@@ -549,17 +549,17 @@
 </div>
 </section>
 
-<!-- Bouton ScrollTop -->
+<!-- Bouton ScrollDown -->
 
-    <a href="#navigation" class="btn btn-scrolltop picto-theme5" id="scrollTop">
-        <img src="image/Chien langue Scroll Down.png" width="50" height="auto">
+    <a href="#navigation" class="btn btn-scrollDown" id="scrollTop">
+        <img src="image/Chien langue Scroll Down.png" class="picto-theme4" width="50" height="auto">
     </a>
 
 
-<!--Bouton ScrollDown -->
+<!--Bouton ScrollTop -->
 
-    <a href="#footer" class="btn btn-scrollDown picto-theme4" id="scrollDown">
-        <img src="image/Chien langue Scroll Top.png" width="50" height="auto">
+    <a href="#footer" class="btn btn-scrolltop" id="scrollDown">
+        <img src="image/Chien langue Scroll Top.png" class="picto-theme5" width="50" height="auto">
     </a>
 
 
