25e commit fixe scrolltop/down button

--- a/index.html
+++ b/index.html
@@ -549,18 +549,19 @@
 </div>
 </section>
 
-<!-- Bouton ScrollDown -->
 
-    <a href="#navigation" class="btn btn-scrollDown" id="scrollTop">
-        <img src="image/Chien langue Scroll Down.png" class="picto-theme4" width="50" height="auto">
-    </a>
+<!-- Bouton ScrollDown -->
+<a href="#footer" class="btn btn-scrollDown" id="scrollDown">
+    <img src="image/Chien langue Scroll Top.png" class="picto-theme5" width="50" height="auto">
+</a>
+
 
 
 <!--Bouton ScrollTop -->
-
-    <a href="#footer" class="btn btn-scrolltop" id="scrollDown">
-        <img src="image/Chien langue Scroll Top.png" class="picto-theme5" width="50" height="auto">
+    <a href="#navigation" class="btn btn-scrolltop" id="scrollTops">
+        <img src="image/Chien langue Scroll Down.png" class="picto-theme4" width="50" height="auto">
     </a>
+
 
 
 
@@ -575,12 +576,12 @@
             <div class="modal-body bg-modal-1">
                 <div class="row row-cols-2 justify-content-center">
 
-                    <div class="ChangeThemeDiv block-spring position-relative" data-theme="spring">
+                    <div class="ChangeThemeDiv block-spring position-relative rounded-circle rounded-pill" data-theme="spring">
                         <img class="btn-spring position-relative top-50 start-50 translate-middle" src="image/chien printemp.png" width="42" height="auto">
                         <!-- Printemps de chien -->
                     </div>
 
-                    <div class="ChangeThemeDiv block-autumn position-relative" data-theme="autumn">
+                    <div class="ChangeThemeDiv block-autumn position-relative rounded-circle rounded-pill" data-theme="autumn">
                         <img class="btn-autumn position-relative top-50 start-50 translate-middle" src="image/chien automne.png" width="42" height="auto">
                         <!-- Chien d'autonme -->
                     </div>
