--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
                 <!-- Bouton, quand la barre s'effondre (disparrait) après un point de rupture (lg ici)-->
                 <!-- cliquer dessus pour faire réparaitre les éléments de la barre de navig quand on est en lg-->
-                <button data-for="ChienNavbar1" type="button" class="navbar-toggler " data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                <button type="button" class="navbar-toggler " data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                     arial-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation" data-clickdog onclick="changeDog()">
                     <!-- Image du bouton (voir documentation boostrap pour avoir une autre image)-->
             <a href="#presentation"></a> <img src="image/Chienlangue&nonlanguepictoalt.png" width="42" height="42" 
-            class="me-1 picto-theme2 call-function-changeDog" alt="Chien langue & non langue picto" id="ChienNavbar1">
+            class="me-1 picto-theme2 call-function-changeDog" alt="Chien langue & non langue picto" id="">
                 </button>
 
                 <!-- Modal Button -->
@@ -60,7 +60,7 @@
     <div class="container">
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
 
-            <ul class="navbar-nav bg-0 col-12 col-md-8 me-lg-auto mb-6 justify-content-center mb-md-0">
+            <ul class="navbar-nav col-12 col-md-8 me-lg-auto mb-6 justify-content-center mb-md-0">
                                 <!-- <ul class="navbar-nav bg-0"> -->
                                 <li class="nav-item">
                                     <a href="#presentation" class="nav-link color-white-link">Présentation de l'association</a>
@@ -85,8 +85,8 @@
                             <div class="dropdown text-end">
                                 <a href="#" class="d-block link-light text-decoration-none dropdown-toggle"
                                     data-bs-toggle="dropdown" aria-expanded="false"  onclick="changeDog()">
-                                    <img data-for="ChienNavbar2" src="image/Chienlangue&nonlanguepictoalt.png" alt="mdo" width="32" height="32"
-                                        class="rounded-circle call-function-changeDog picto-theme2" id="ChienNavbar2">
+                                    <img src="image/Chienlangue&nonlanguepictoalt.png" alt="mdo" width="32" height="32"
+                                        class="rounded-circle call-function-changeDog picto-theme2" id="">
                                 </a>
                                 <ul class="dropdown-menu text-small ovale-navigation">
                                     <!-- <li><a class="dropdown-item" href="#navigation"></a></li> -->
@@ -396,10 +396,10 @@
     <!-- Section #3 Contact -->
     
     <section id="contact">
-        <div class="row g-5 container-fluid">
+        <fieldset class="row g-5 container-fluid bg-3">
     
             <div class="col-md-7 col-lg-8">
-                <h1 class="mb-3">Nous contacter</h1>
+                <h1><legend class="mb-3">Nous contacter</legend></h1>
                 <form class="needs-validation" novalidate="">
                     <div class="row g-3">
                         <div class="col-sm-6">
@@ -446,7 +446,7 @@
                         <img src="image/Chienlangue&nonlanguepictoalt.png" width="72" height="auto" class="picto-theme6">Envoyez</button>
                 </form>
             </div>
-        </div>
+        </fieldset>
     </section>
 
 </main>   
@@ -552,17 +552,15 @@
 
 <!-- Bouton ScrollDown -->
 <a href="#footer" class="btn btn-scrollDown" id="scrollDown">
-    <img src="image/Chien langue Scroll Top.png" class="picto-theme5" width="50" height="auto">
+    <img src="image/Chien langue Scroll Top.png" class="picto-theme5" width="40" height="auto">
 </a>
 
 
 
 <!--Bouton ScrollTop -->
     <a href="#navigation" class="btn btn-scrolltop" id="scrollTops">
-        <img src="image/Chien langue Scroll Down.png" class="picto-theme4" width="50" height="auto">
+        <img src="image/Chien langue Scroll Down.png" class="picto-theme4" width="40" height="auto">
     </a>
-
-
 
 
 <!-- Modal (contain) -->
