--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <!-- Bouton, quand la barre s'effondre (disparrait) après un point de rupture (lg ici)-->
                 <!-- cliquer dessus pour faire réparaitre les éléments de la barre de navig quand on est en lg-->
                 <button data-for="ChienNavbar1" type="button" class="navbar-toggler " data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                    arial-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation" data-clickdog onclick="changeDog()">
+                    arial-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation" data-clickdog onclick="changeDog()" >
                     <!-- Image du bouton (voir documentation boostrap pour avoir une autre image)-->
             <a href="#presentation"></a> <img src="image/Chienlangue&nonlanguepictoalt.png" width="42" height="42" 
-            class="me-1 picto-theme2 call-function-changeDog" alt="Chien langue & non langue picto" id="ChienNavbar1">
+            class="me-1 picto-theme2 call-function-changeDog" alt="Chien langue & non langue picto" id="changeDog1">
                 </button>
 
                 <!-- Modal Button -->
@@ -86,7 +86,7 @@
                                 <a href="#" class="d-block link-light text-decoration-none dropdown-toggle"
                                     data-bs-toggle="dropdown" aria-expanded="false"  onclick="changeDog()">
                                     <img data-for="ChienNavbar2" src="image/Chienlangue&nonlanguepictoalt.png" alt="mdo" width="32" height="32"
-                                        class="rounded-circle call-function-changeDog picto-theme2" id="ChienNavbar2">
+                                        class="rounded-circle call-function-changeDog picto-theme2" id="changeDog2">
                                 </a>
                                 <ul class="dropdown-menu text-small ovale-navigation">
                                     <!-- <li><a class="dropdown-item" href="#navigation"></a></li> -->
@@ -598,6 +598,7 @@
             crossorigin="anonymous"></script>
 
     <!-- Popper and Jquery Distant -->
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
