29e commit better js function for my dog function 4

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <!-- Bouton, quand la barre s'effondre (disparrait) après un point de rupture (lg ici)-->
                 <!-- cliquer dessus pour faire réparaitre les éléments de la barre de navig quand on est en lg-->
                 <button data-for="ChienNavbar1" type="button" class="navbar-toggler " data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-                    arial-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation" data-clickdog onclick="changeDog()" >
+                    arial-controls="navbarNavDropdown" aria-expanded="false" aria-label="toggle navigation" data-clickdog onclick="changeDog1()" >
                     <!-- Image du bouton (voir documentation boostrap pour avoir une autre image)-->
             <a href="#presentation"></a> <img src="image/Chienlangue&nonlanguepictoalt.png" width="42" height="42" 
             class="me-1 picto-theme2 call-function-changeDog" alt="Chien langue & non langue picto" id="changeDog1">
@@ -84,7 +84,7 @@
     
                             <div class="dropdown text-end">
                                 <a href="#" class="d-block link-light text-decoration-none dropdown-toggle"
-                                    data-bs-toggle="dropdown" aria-expanded="false"  onclick="changeDog()">
+                                    data-bs-toggle="dropdown" aria-expanded="false"  onclick="changeDog2()">
                                     <img data-for="ChienNavbar2" src="image/Chienlangue&nonlanguepictoalt.png" alt="mdo" width="32" height="32"
                                         class="rounded-circle call-function-changeDog picto-theme2" id="changeDog2">
                                 </a>
