--- a/index.html
+++ b/index.html
@@ -169,7 +169,8 @@
     
     <div class="row">
 <div class="col col justify-content-start">
-        <div class="d-flex col-md-6 order-md-1">
+        <div class="d-flex col-md-8 col-lg-6
+        order-md-1">
             <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
                 xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
                 preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -179,10 +180,10 @@
         </div>
     </div>
 </div>
-
+<br>
                 <div class="row">
             <div class="col justify-content-end">
-            <div class="d-flex col-md-6 col-lg-12 order-md-1">
+            <div class="d-flex col-md-8 col-lg-6 order-md-1">
                     <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
                         focusable="false">
@@ -208,8 +209,8 @@
         </div>
     </div>
 </div> -->
-    
-    <p class="lead col-12 col-md-8 col-lg-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente 
+    <div class="d-flex col-12 order-md-1">
+    <p class="lead text-start text-block ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente 
         numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi 
         voluptates! Atque quae cupiditate qui eius?<br>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
@@ -218,7 +219,9 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
                         numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi
                         voluptates! Atque quae cupiditate qui eius?</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
+                        </div>
+        <div class="d-flex col-12 order-md-1">
+        <p class="text-start text-block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
             numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi
             voluptates! Atque quae cupiditate qui eius?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
@@ -227,6 +230,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente
             numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi
             voluptates! Atque quae cupiditate qui eius?</p>
+                                    </div>
     <!-- <p><a class="btn btn-secondary" href="#">View details »</a></p> -->
 </div>
 </article>
@@ -239,7 +243,7 @@
 <div class="container-fluid bg-2 col-12 col-md-12 col-lg-12">
 
 <!-- Carousel -->
-<div id="carouselExampleCaptions" class="carousel slide col-12 col-md-8 col-lg-6">
+<div id="carouselExampleCaptions" class="carousel slide col-12 col-md-12 col-lg-12">
     <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
@@ -441,9 +445,9 @@
                             </div>
                         </div>
                     </div>
-                    <hr class="my-6">
+                    <br>
                     <button class="w-6 py-8 btn btn-doggy  btn-md" type="submit"> 
-                        <img src="image/Chienlangue&nonlanguepictoalt.png" width="72" height="auto" class="picto-theme6">Envoyez</button>
+                        <img src="image/Chienlangue&nonlanguepictoalt.png" width="72" height="auto" class="picto-theme6"></button>
                 </form>
             </div>
         </fieldset>
