Revert "31e commit fusion of branch"
This reverts commit 5d5cebe511368a7cb3893c11b8bd36afa793013a.

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header bg-0">
-                <h1 class="modal-title fs-5 " id="settingsModalLabel">Réglages du thème : <span>Printemps</span>/<span>Automne</span> </h1>
+                <h1 class="modal-title fs-5 " id="settingsModalLabel">Réglages du thème Printemps/Automne</h1>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body bg-modal-1">
