--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                     atque dolorum quos quo ullam architecto eaque minima recusandae, quisquam quam,
                                     obcaecati hic soluta blanditiis praesentium laudantium reprehenderit! Consectetur!</p>
     </div>
-    <div class="col-md-5 order-md-1 p-3">
+    <div class="col-md-5 order-md-1 p-4">
         <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto my-2 mx-auto d-block" width="500"
             height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
             preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -196,7 +196,7 @@
     <div class="row">
 <div class="col justify-content-start">
         <div class="d-flex col-md-5 col-lg-6
-        order-md-1 p-2">
+        order-md-1 p-1 m-5 pb-md-5">
             <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
                 xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
                 preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -206,10 +206,11 @@
         </div>
     </div>
 </div>
+
 <br>
                 <div class="row">
             <div class="col justify-content-end">
-            <div class="d-flex col-md-5 col-lg-6 order-md-1 p-2">
+            <div class="d-flex col-md-5 col-lg-6 order-md-1 p-1 m-5 pb-md-5">
                     <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice"
                         focusable="false">
@@ -574,7 +575,7 @@
 
 
 <!--Bouton ScrollTop -->
-    <a href="#navigation" class="btn btn-scrolltop" id="scrollTops">
+    <a href="#navigation" class="btn btn-scrolltop" id="scrollTop">
         <img src="image/Chien langue Scroll Down.png" class="picto-theme4" width="40" height="auto">
     </a>
 
@@ -607,6 +608,8 @@
 </div>
 
 
+    <!-- Local Javascript -->
+    <script src="script.js"></script>
 
     <!-- Local Bootstrap Javascript-->
     <script src="bootstrap-5.3.0-alpha1-dist/js/bootstrap.bundle.min.js"
@@ -620,9 +623,6 @@
     
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
         crossorigin="anonymous"></script>
-
-    <!-- Local Javascript -->
-    <script src="script.js"></script>
 
 </body>
 </html>
