36e commit element put in second page, image and text

--- a/event.html
+++ b/event.html
@@ -126,21 +126,51 @@
 <!-- Main page -->
 <main class="container-fluid bg-site">
 
+<!-- Section #0 Illustration/Photographie de l'évènement-->
+<!-- <br> -->
+<section class="container-fluid bg-1" id="#photo-event"> 
+<article>
+        <div class="d-flex
+                order-md-3 p-3 m-3 pb-md-1">
+            <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"
+            width="1200" height="800" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 800x1200"
+            preserveAspectRatio="xMidYMid slice" focusable="false">
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="#eee"></rect><text x="45%" y="50%" fill="#aaa" dy=".3em">800x1200</text>
+        </svg>
+    </div>
+    </article>
+</section>
 
 
+<!-- Section #1 Détail de l'évènement -->
+<br>
+<section class="bg-2 container-fluid" id="#text-event">
 
-
-
-
-
-
-
-
+<article>
+    <h2 class="fw-normal featurette-heading lh-1 mb-3">Lorem ipsum dolor sit amet.</h2>
+    
+    <div class="row featurette order-md-1">
+        <div class="d-flex col-12 order-md-2">
+            <p class="lead text-start text-block ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium
+                quidem natus sapiente
+                numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi
+                voluptates! Atque quae cupiditate qui eius?<br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente <br>
+                numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi
+                voluptates! Atque quae cupiditate qui eius?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quidem natus sapiente <br>
+                numquam quam accusantium eius veniam vero dolor fuga beatae totam, consequuntur animi
+                voluptates! Atque quae cupiditate qui eius?</p>
+        </div>
+</article>
+</section>
 
 
 
 
 </main>
+
 
 
 
