--- a/index.html
+++ b/index.html
@@ -64,14 +64,49 @@
                             </a>
                         </li>
 
-                            <li class="nav-item dropdown ovale-navigation" >
 
 
+    <div class="container-fluid">
+        <a class="navbar-brand color-white-link fs-6 fw-bold" href="#objectifs">Objectifs</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown"
+            aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        </button>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown ovale-navigation"> 
+                    <button class="d-flex btn btn-down " data-bs-toggle="dropdown" aria-expanded="false">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
+                                    </svg>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu ovale-navigation">
+                        <li><a class="dropdown-item" href="/event.html#">L'évènement</a></li>
+                        <li><a class="dropdown-item" href="/event.html#photo-event">Une Photo</a></li>
+                        <li><a class="dropdown-item" href="/event.html#text-event">Description</a><li>
+                    </ul>
+                </li>
+            </ul>
+    </div>
+                            <!-- <li class="nav-item dropdown ovale-navigation">
                                 <a href="#objectifs" class="nav-link color-white-link fs-6 fw-bold  mx-xl-3 p-xl-3">
                                     <p>Objectifs</p>
+                                
                                 </a>
+                                    <div class="dropdown" >
+                                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        </button>
+                                        <ul
+                                            class="dropdown-menu text-start text-small ovale-navigation text-start align-content-center dropdown-center mx-xl-3 p-xl-3">
+                                            <li><a class="dropdown-item" href="/event.html#">L'évènement</a></li>
+                                            <li><a class="dropdown-item" href="/event.html#photo-event">Une Photo</a></li>
+                                            <li><a class="dropdown-item" href="/event.html#text-event">Description</a>
+                                            <li>
+                                        </ul>
+                                    </div>
+                        </li> -->
 
-                                <button class="d-flex col btn-down dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+
+                                <!-- <button class="d-flex col btn-down dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
                                         <path
                                             d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
@@ -84,9 +119,9 @@
                                         <li>
                                     </ul>
                                     
-                                </button>
+                                </button> -->
 
-                        <div class="dropdown text-start m-3 p-3">
+                        <!-- <div class="dropdown text-start m-3 p-3">
                             <a href="#" class="d-block link-light text-decoration-none" role="button" data-bs-toggle="dropdown"
                                 aria-expanded="false">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="bi bi-arrow-down-circle-fill d-flex col btn-down" viewBox="0 0 16 16">
@@ -101,9 +136,9 @@
                                         <li><a class="dropdown-item" href="/event.html#text-event">Description</a>
                                         <li>
                                     </ul>
-                        </div>
+                        </div> -->
 
-                        </li>
+
 
                                 <li class="nav-item">
                                 <a href="#gallerie-image" class=" nav-link color-white-link fs-6 fw-bold p-xl-3 mx-lg-3"><p>L'association</p></a>
