41 commit Fixed NavBar Link Page

--- a/event.html
+++ b/event.html
@@ -108,14 +108,14 @@
                             </a>
                             <ul
                                 class="dropdown-menu text-small ovale-navigation text-center align-content-center dropdown-center">
-                                <li><a class="dropdown-item ovale-navigation" href="#presentation">Présentation de
+                                <li><a class="dropdown-item ovale-navigation" href="/index.html#presentation">Présentation de
                                         l'association</a></li>
-                                <li><a class="dropdown-item" href="#objectif">Nos Objectifs</a></li>
-                                <li><a class="dropdown-item" href="#gallerie-image">Les petits chiens du monde</a></li>
+                                <li><a class="dropdown-item" href="/index.html#objectif">Nos Objectifs</a></li>
+                                <li><a class="dropdown-item" href="/index.html#gallerie-image">Les petits chiens du monde</a></li>
                                 <li>
                                     <hr class="dropdown-divider bg-dark">
                                 </li>
-                                <li><a class="dropdown-item" href="#contact">Nous contacter</a></li>
+                                <li><a class="dropdown-item" href="/index.html#contact">Nous contacter</a></li>
                             </ul>
                         </div>
 
