--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown"
             aria-controds="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
         </button>
+
             <ul class="navbar-nav">
                 <li class="nav-item dropdown ovale-navigation"> 
                     <button class="d-flex btn btn-down " data-bs-toggle="dropdown" aria-expanded="false">
@@ -80,9 +81,9 @@
                         </svg>
                     </button>
                     <ul class="dropdown-menu text-start text-small ovale-navigation text-start align-content-center dropdown-center mx-xl-4 p-xl-4">
-                        <li><a class="dropdown-item" href="#">L'évènement</a></li>
-                        <li><a class="dropdown-item" href="#photo-event">Une Photo</a></li>
-                        <li><a class="dropdown-item" href="#text-event">Description</a></li>
+                        <li><a class="dropdown-item" href="/event.html#">L'évènement</a></li>
+                        <li><a class="dropdown-item" href="/event.html#photo-event">Une Photo</a></li>
+                        <li><a class="dropdown-item" href="/event.html#text-event">Description</a></li>
                     </ul>
                 </li>
             </ul>
