42e commit Correction Navbar and remplacement of Event NavBar

--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
                             </a>
                         </li>
 
-    <div class="container-fluid mt-3">
-        <a class="navbar-brand color-white-link fs-6 fw-bold mx-xl-4 p-xl-4" href="#objectifs">Objectifs</a>
+    <div class="container-fluid mt-4">
+        <a class="navbar-brand color-white-link fs-6 fw-bold mx-xl-4 p-xl-1" href="#objectifs">Objectifs</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown"
             aria-controds="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
         </button>
 
-            <ul class="navbar-nav">
+            <ul class="navbar-nav mt-1 mb-3">
                 <li class="nav-item dropdown ovale-navigation"> 
-                    <button class="d-flex btn btn-down " data-bs-toggle="dropdown" aria-expanded="false">
+                    <button class="d-flex btn-down " data-bs-toggle="dropdown" aria-expanded="false">
                         <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
                             <path
                                 d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
@@ -88,94 +88,38 @@
                 </li>
             </ul>
     </div>
-                            <!-- <li class="nav-item dropdown ovale-navigation">
-                                <a href="#objectifs" class="nav-link color-white-link fs-6 fw-bold  mx-xl-3 p-xl-3">
-                                    <p>Objectifs</p>
-                                
-                                </a>
-                                    <div class="dropdown" >
-                                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                        </button>
-                                        <ul
-                                            class="dropdown-menu text-start text-small ovale-navigation text-start align-content-center dropdown-center mx-xl-3 p-xl-3">
-                                            <li><a class="dropdown-item" href="/event.html#">L'évènement</a></li>
-                                            <li><a class="dropdown-item" href="/event.html#photo-event">Une Photo</a></li>
-                                            <li><a class="dropdown-item" href="/event.html#text-event">Description</a>
-                                            <li>
-                                        </ul>
-                                    </div>
-                        </li> -->
 
+            <li class="nav-item">
+            <a href="#gallerie-image" class=" nav-link color-white-link fs-6 fw-bold p-xl-3 mx-lg-3"><p>L'association</p></a>
+            </li>
+            <li class="nav-item">
+                <a href="#contact" class="nav-link color-white-link fs-6 fw-bold p-xl-3 mx-xl-3"><p>Contact</p></a>
+            </li>
+        </ul>   
+    </li>
 
-                                <!-- <button class="d-flex col btn-down dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="bi bi-arrow-down-circle-fill" viewBox="0 0 16 16">
-                                        <path
-                                            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
-                                    </svg>
-                                    <ul
-                                        class="dropdown-menu text-start text-small ovale-navigation text-start align-content-center dropdown-center mx-xl-3 p-xl-3">
-                                        <li><a class="dropdown-item" href="/event.html#">L'évènement</a></li>
-                                        <li><a class="dropdown-item" href="/event.html#photo-event">Une Photo</a></li>
-                                        <li><a class="dropdown-item" href="/event.html#text-event">Description</a>
-                                        <li>
-                                    </ul>
-                                    
-                                </button> -->
-
-                        <!-- <div class="dropdown text-start m-3 p-3">
-                            <a href="#" class="d-block link-light text-decoration-none" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" class="bi bi-arrow-down-circle-fill d-flex col btn-down" viewBox="0 0 16 16">
-                                        <path
-                                            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z" />
-                                    </svg>
-                            </a>
-                                    <ul
-                                        class="dropdown-menu text-start text-small ovale-navigation text-start align-content-center dropdown-center mx-xl-3 p-xl-3">
-                                        <li><a class="dropdown-item" href="/event.html#">L'évènement</a></li>
-                                        <li><a class="dropdown-item" href="/event.html#photo-event">Une Photo</a></li>
-                                        <li><a class="dropdown-item" href="/event.html#text-event">Description</a>
-                                        <li>
-                                    </ul>
-                        </div> -->
-
-
-
-                                <li class="nav-item">
-                                <a href="#gallerie-image" class=" nav-link color-white-link fs-6 fw-bold p-xl-3 mx-lg-3"><p>L'association</p></a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a href="#contact" class="nav-link color-white-link fs-6 fw-bold p-xl-3 mx-xl-3"><p>Contact</p></a>
-                                </li>
-
-                                </ul>   
-
+                <!-- Sub NavBar -->
+                    <div class="dropdown text-start m-3 p-3 d-lg-none"> 
+                        <a href="#" class="d-block link-light text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <img data-for="ChienNavbar2" src="image/Chienlangue&nonlanguepictoalt.png" alt="mdo" width="32" height="32"
+                                class="rounded-circle changeDog picto-theme2">
+                        </a>
+                        <ul class="dropdown-menu text-small ovale-navigation text-center align-content-center dropdown-center">
+                            <li><a class="dropdown-item ovale-navigation" href="#presentation">Présentation de l'association</a></li>
+                            <li><a class="dropdown-item" href="#objectifs">Nos Objectifs</a></li>
+                            <li><a class="dropdown-item" href="#gallerie-image">Les petits chiens du monde</a></li>
+                            <li>
+                                <hr class="dropdown-divider bg-dark">
                             </li>
-
-                        <!-- Sub NavBar -->
-                            <div class="dropdown text-start m-3 p-3 d-lg-none"> 
-                                <a href="#" class="d-block link-light text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
-                                    <img data-for="ChienNavbar2" src="image/Chienlangue&nonlanguepictoalt.png" alt="mdo" width="32" height="32"
-                                        class="rounded-circle changeDog picto-theme2">
-                                </a>
-                                <ul class="dropdown-menu text-small ovale-navigation text-center align-content-center dropdown-center">
-                                    <li><a class="dropdown-item ovale-navigation" href="#presentation">Présentation de l'association</a></li>
-                                    <li><a class="dropdown-item" href="#objectifs">Nos Objectifs</a></li>
-                                    <li><a class="dropdown-item" href="#gallerie-image">Les petits chiens du monde</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider bg-dark">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#contact">Nous contacter</a></li>
-                                </ul>
-                            </div>
-
-                      </ul>
-                   </div>
-                </div>
-            </div>
-        </nav>
+                            <li><a class="dropdown-item" href="#contact">Nous contacter</a></li>
+                        </ul>
+                    </div>
+              </ul>
+           </div>
+        </div>
+    </div>
+</nav>
 
 
     </section>
